--- a/FurtherTuning.Rmd
+++ b/FurtherTuning.Rmd
@@ -371,7 +371,8 @@ codebook$variable
 mse_df <- tibble(
   Model = character(),      
   Train_MSE = numeric(),   
-  Test_MSE = numeric()   
+  Test_MSE = numeric(),
+  Delta_MSE = numeric()
 )
 
 # Function to add rows to the mse_df
@@ -379,7 +380,8 @@ add_rmse_row <- function(df, model_name, train_mse, test_mse) {
   new_row <- tibble(
     Model = model_name,
     Train_MSE = train_mse,
-    Test_MSE = test_mse
+    Test_MSE = test_mse,
+    Delta_MSE = train_mse-test_mse
   )
   updated_df <- bind_rows(df, new_row)
   return(updated_df)
@@ -396,19 +398,29 @@ test_set_f <- subset(test_set_f, select = -state_encoded)
           1. LINEAR REGRESSION (ELASTIC NET REGULARIZATION)                     
 ```{r elastic_net_regularization, warning=FALSE}
 # DEVELOPING THE MODEL (LR. ENR)
+#preparing the train set into matrix
+x_train <- model.matrix(state_mentalhealth_util ~ ., data = GTrend_training_set_f, intercept = FALSE)
+y_train <- GTrend_training_set_f$state_mentalhealth_util
 
-x <- model.matrix(state_mentalhealth_util ~ ., data = GTrend_training_set_f, intercept = FALSE)
-                  
-y <- GTrend_training_set_f$state_mentalhealth_util
+#preparing the test set into matrix
+x_test <- model.matrix(state_mentalhealth_util ~ ., data = test_set_f, intercept = FALSE)
+y_test <- test_set_f$state_mentalhealth_util
 
 #Performing cross_validation to find the best lambda
      
 set.seed(123) # for consistent and replicable results
    
-cv_model <- cv.glmnet(x, y, alpha = 0.5, family = "gaussian", nfolds = 5)
+cv_model <- cv.glmnet(x_train, y_train, alpha = 0.5, family = "gaussian", nfolds = 5)
    
 plot(cv_model) #plotting cross-validation curve
 
+train_preds <- predict(cv_model, newx=x_train)
+test_preds <- predict(cv_model, newx=x_test)
+
+elastic_net_train_mse <- mean((train_preds-y_train)^2)
+elastic_net_test_mse <- mean((test_preds-y_test)^2)
+#add the test and train RMSEs to the mse_df
+mse_df <-  add_rmse_row(mse_df, "Elastic Net", elastic_net_train_mse, elastic_net_test_mse)
 ```
 ```{r mse_best_lambda, warning=FALSE}
 #getting the best/ optimal lambda
@@ -417,16 +429,16 @@ best_lambda_1se <- cv_model$lambda.1se
 
 
 #developing the model using the best lambda
-model_min <- glmnet(x, y, alpha = 0.5, lambda = best_lambda, family = "gaussian")
-model_lambda_1se <- glmnet(x, y, alpha = 0.5, lambda = best_lambda_1se, family = "gaussian")
+model_min <- glmnet(x_train, y_train, alpha = 0.5, lambda = best_lambda, family = "gaussian")
+model_lambda_1se <- glmnet(x_train, y_train, alpha = 0.5, lambda = best_lambda_1se, family = "gaussian")
 
 #preparing the test set into matrix
 x_test <- model.matrix(state_mentalhealth_util ~ ., data = test_set_f, intercept = FALSE)
 y_test <- test_set_f$state_mentalhealth_util
 
 #ensure x and x_test have the same number of columns. its a good practise after using model.matrix
-common_columns <- intersect(colnames(x), colnames(x_test))
-x <- x[, common_columns]
+common_columns <- intersect(colnames(x_train), colnames(x_test))
+x_train <- x_train[, common_columns]
 x_test <- x_test[, common_columns]
 
 # use test set to make predictions, use lambda min and lambda_1se
@@ -654,11 +666,7 @@ plot(rf_cv_model$finalModel$predicted, residuals,
 abline(h = 0, col = "red")
 
 ```
-```{r print_model_mse_df, warning=FALSE}
-mse_df
 
-names(GTrend_training_set_f)
-```
 **Tune MRTRY Hyperparameter to 10 from 12***
 Let's do some hyperparameter tuning. We have the opportunity to reset the mtry value from 12 to 10 here, calculate and collect the MSE for comparison with other MSE values from the other models. We can also tune the number tree using some specific values. 
 ```{r Tune_mtry_to_10, warning=FALSE}
@@ -698,7 +706,7 @@ varImpPlot(
   main = "Top 10 Important Variables"
 )
 
-print(mse_df)
+mse_df
 ```
 ```{r tune_rf_model_trees, warning=FALSE}
 
@@ -707,7 +715,7 @@ set.seed(42)
 rf_data <- GTrend_training_set_f[, c(-10)]
 rf_label <- GTrend_training_set_f$state_mentalhealth_util
 
-ntree_grid <- c(50, 100, 200, 500, 1000)
+ntree_grid <- c(50, 100, 200, 300, 400, 500,600, 700, 800, 900, 1000)
 control <- trainControl(method = "cv", number = 5)
 
 results <- data.frame(ntree = integer(), Accuracy = numeric())
